# LinkNet

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run_docker_test.sh
.github/workflows/: README.md  ci.yml  code-quality.yml  release.yml
docs/: README.md  architecture.md  examples.md  getting_started.md
docs/advanced/: nat_traversal.md  performance.md  security_model.md
docs/api/: README.md
docs/components/: chat.md  cryptography.md  discovery.md  file_transfer.md  messaging.md  network.md  ui.md
examples/: usage_scenarios.md
include/linknet/: chat_manager.h  console_ui.h  crypto.h  discovery.h  file_transfer.h  logger.h  message.h  network.h  types.h
src/: main.cpp
src/chat/: chat_manager.cpp
src/common/: message.cpp
src/crypto/: sodium_crypto.cpp
src/discovery/: peer_discovery.cpp
src/file/: file_transfer.cpp
src/network/: asio_network.cpp
src/ui/: console_ui.cpp
test/: CMakeLists.txt  crypto_test.cpp  message_test.cpp
